--- a/src/Components/TickTacToe/TicTacToe.css
+++ b/src/Components/TickTacToe/TicTacToe.css
@@ -44,3 +44,13 @@
     display: flex;
     margin: auto;
 }
+
+.boxes img{
+    margin: 50px;
+}
+
+.title img{
+    padding: 20px 20px;
+    height: 50px;
+    
+}
